[package]
name = "rust-lambda-calculus-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-lexpr = "0.1.2"
serde_derive = "1.0.136"
serde = { version = "1.0.136", features = ["rc"] }
recursion = "0.5.2"
stacker = "0.1.15"
dashmap = "6.0.1"
lazy_static = "1.5.0"
memoize = { version = "0.4.2", features = ["full"] }
bumpalo = "3.16.0"
slotmap = "1.0.7"
moving_gc_arena = "0.3.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] } 
proptest = "1.0.0"

[[bench]]
name = "smalltt"
harness = false

[profile.bench]
debug = true
